# Zappy-GUI

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DOCUMENTATION.md  LICENSE  LICENSE.md  build.sh  fetch.sh  flake.nix  guy.glb  guyanim.glb  player.glb  player.iqm  player2.glb
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: project-checker.yaml
assets/models/: Platformer2.glb  Player.iqm  Untitled.mtl  platformer.glb
assets/shaders/: atmosphere.frag  atmosphere.vert  planet.frag  planet.vert  sun.frag  sun.vert
include/ZapGUI/: Drawable.hpp  Error.hpp  Filename.hpp  Logger.hpp  Macro.hpp  NonCopyable.hpp  Raylib.hpp  Threads.hpp  Types.hpp  Version.hpp
script/: clean.sh  compression.py  dependencies.sh
src/: Main.cpp
src/App/: Application.cpp  Application.hpp  Arguments.cpp  Arguments.hpp  Atmosphere.cpp  Atmosphere.hpp  CreateObjects.cpp
src/App/AI/: Player.cpp  Player.hpp  PlayerManager.hpp
src/App/Maths/: Maths.hpp
src/App/Protocol/: Callback.cpp  Callback.hpp  MapSize.hpp  Protocol.cpp  Protocol.hpp
src/App/Seed/: Create.cpp  Create.hpp  CreateObjects.cpp  Player.cpp  Rocks.cpp  Seed.cpp  Sun.cpp  System.cpp  Trees.cpp
src/App/Stars/: BasePlanet.cpp  BasePlanet.hpp  Planet.cpp  Planet.hpp  Slavia.cpp  Slavia.hpp  Sun.cpp  Sun.hpp  Zappy.cpp  Zappy.hpp
src/App/Sun/: Sun.cpp  Sun.hpp
src/Utils/: Error.cpp  Filename.cpp  Logger.cpp  Threads.cpp
src/ZapGUI/: Context.cpp  Context.hpp
src/ZapGUI/Drawable/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelAnim.cpp  ModelAnim.hpp  ModelBase.cpp  ModelBase.hpp  ModelLoader.cpp  ShaderModel.cpp  ShaderModel.hpp  SkyBox.cpp  SkyBox.hpp
src/ZapGUI/Engine/: GameEngine.cpp  GameEngine.hpp  RenderEngine.hpp
src/ZapGUI/Event/: EventCallback.cpp  EventCallback.hpp
src/ZapGUI/Network/: Client.cpp  Client.hpp  Network.hpp  NetworkClient.cpp  NetworkClient.hpp
src/ZapGUI/Network/Command/: CommandDispatcher.cpp  CommandDispatcher.hpp  CommandFactory.cpp  CommandFactory.hpp  CommandSerializer.hpp  ICommand.hpp
src/ZapGUI/Render/: Camera.cpp  Camera.hpp  Loop.cpp  Loop.hpp  Scene.cpp  Scene.hpp
